Fixed icons shifting when hovered over

--- a/views/styles.css
+++ b/views/styles.css
@@ -6,12 +6,12 @@ h1, h2, h3{
 
 h1 {
    font-size: 1.6em;
-   color: #65944A;
+   color: #007439;
 }
 
 h2 {
    font-size: 1.4em;
-   color: #65944A;
+   color: #007439;
 }
 
 h3 {
@@ -46,16 +46,7 @@ body{
 
 .header {	
 	height: 100px;
-	text-align: left;
-	background: rgb(53,106,160); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(53,106,160,1) 0%, rgba(53,106,160,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(53,106,160,1)), color-stop(100%,rgba(53,106,160,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#356aa0', endColorstr='#356aa0',GradientType=0 ); /* IE6-9 */
-
+	background-color: #007439;
 	border-bottom: solid 4px black;
 }	
 
@@ -136,14 +127,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#356aa0', end
 /* Main Content */
 
 .content-wrapper{
-	background: rgb(53,106,160); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(53,106,160,1) 0%, rgba(53,106,160,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(53,106,160,1)), color-stop(100%,rgba(53,106,160,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#356aa0', endColorstr='#356aa0',GradientType=0 ); /* IE6-9 */
+	background-color: #007439;
 	margin: 0;
 }
 
@@ -166,7 +150,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#356aa0', end
 .welcome-message h1{
 	text-align: center;
 	margin-bottom: 5px;
-	color: #65944A;
+	color: #007439;
 	font: bold 4em 'Roboto';
 	margin-top: 10px;
 }
@@ -278,11 +262,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#356aa0', end
 	margin: 20px;
 	display: inline-block;
 	margin-left: 5%;
+	border: 4px solid white;
+	border-radius: 100px;
 }
 
 
 .icon-section a:hover{
-      margin: 16px;
+      margin: 20px;
       margin-left: 5%;
       border: 4px solid #65944A;
       border-radius: 100px;
